Revert "fix: remove text-align: left which stopped rtl working"
This reverts commit 2152cd0e01ddc1e671684700970a4441f0baef3b.

--- a/porches/generic/site/css/main.css
+++ b/porches/generic/site/css/main.css
@@ -7,7 +7,6 @@ body {
   font-weight: 300;
   background: #fff;
   overflow-x: hidden;
-  text-align: unset;
 }
 a:hover,
 a:focus {
